[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/scenes/BattleScene.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[sub_resource type="Animation" id=3]
resource_name = "fade_in"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("../ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "fade_out"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("../ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[node name="BattleScene" type="Control"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
self_modulate = Color( 0.698039, 1, 0.45098, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerSprite" type="Sprite" parent="Background"]
position = Vector2( 256, 320 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 2 )

[node name="EnemySprite" type="Sprite" parent="Background"]
modulate = Color( 0.901961, 0.294118, 0.294118, 1 )
position = Vector2( 768, 320 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 2 )

[node name="Panel" type="Panel" parent="Background"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -152.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FightButton" type="Button" parent="Background/Panel"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -136.0
margin_top = -52.0
margin_right = -37.0
margin_bottom = -8.0
text = "Fight"

[node name="RunButton" type="Button" parent="Background/Panel"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -136.0
margin_top = 4.0
margin_right = -37.0
margin_bottom = 48.0
text = "Run"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Background/Panel"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 16.0
margin_top = -52.0
margin_right = 872.0
margin_bottom = 52.0
text = "Battle has just started!"
align = 1
valign = 1

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Background")
anims/fade_in = SubResource( 3 )
anims/fade_out = SubResource( 4 )

[connection signal="pressed" from="Background/Panel/FightButton" to="." method="_on_FightButton_pressed"]
[connection signal="pressed" from="Background/Panel/RunButton" to="." method="_on_RunButton_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_finished"]
